started ingredients list

--- a/recipes/keto.html
+++ b/recipes/keto.html
@@ -9,7 +9,22 @@
   <body>
     <h1>Keto Chicken Bacon Ranch Casserole</h1>
   
+  <img src="../jpg/cbr.jpg" alt="spoon digging into casserole">
+
+  <h3>What Is Chicken Bacon Ranch Casserole?</h3>
+
+  <p>Chicken bacon ranch casserole is a casserole made of yummy chicken, bacon, and ranch flavors. The base is made of chicken, bacon, ranch dressing, and cheese and then you can decide what vegetables you want to add.</p>
+  
+  <h3>Ingredients</h3>
+  
+    <ul>
+     <li>4 thinly sliced chicken breasts</li>
+     <li>2 tbps butter</li>
+     <li>2 cups broccoli</li>
      
-  </body
+    
+  
+  </body>
+  
   
   </html>
