finish ingrediant list

--- a/recipes/keto.html
+++ b/recipes/keto.html
@@ -21,9 +21,15 @@
      <li>4 thinly sliced chicken breasts</li>
      <li>2 tbps butter</li>
      <li>2 cups broccoli</li>
+     <li>1/2 cup ranch dressing</li>
+     <li>3/4 cup shredded mozzerella</li>
+     <li>2 cups shredded cheddar</li>
+     <li>3 slices bacon, chopped</li>
+     <li>1 tsp garlic powder</li>
+     <li>1 tsp paprika</li>
+     <li>Salt & Pepper to taste</li>
+
      
-    
-  
   </body>
   
   
