added & completed 'Steps'

--- a/recipes/keto.html
+++ b/recipes/keto.html
@@ -28,8 +28,18 @@
      <li>1 tsp garlic powder</li>
      <li>1 tsp paprika</li>
      <li>Salt & Pepper to taste</li>
+    </ul>
 
-     
+     <h3> Steps</h3>
+
+     <ol>
+       <li>Preheat oven to 375F</li>
+       <li>Melt butter & add to the bottom of a 9X13 baking dish</li>
+       <li>Season chicken adn add to baking dish</li>
+       <li>Add broccoli, bacon,ranch, mozzarella, & top with cheddar cheese</li>
+       <li>Bake for 30 minutes. Take out and let cool</li>
+       <li>Enjoy!</li>
+     </ol>
   </body>
   
   
