--- a/recipes/keto.html
+++ b/recipes/keto.html
@@ -13,7 +13,7 @@
 
   <h3>What Is Chicken Bacon Ranch Casserole?</h3>
 
-  <p>Chicken bacon ranch casserole is a casserole made of yummy chicken, bacon, and ranch flavors. The base is made of chicken, bacon, ranch dressing, and cheese and then you can decide what vegetables you want to add.</p>
+  <p>Chicken bacon ranch casserole is a casserole made of yummy chicken, bacon, and ranch flavors. The base is made of chicken, bacon, ranch dressing, and cheese and then you can decide what vegetables you want to add, we've used broccoli.</p>
   
   <h3>Ingredients</h3>
   
