added crack chicken receipe

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <p><a href="recipes/crust.html">Chicken Crust Pizza</a></p>
 
+    <p><a href="recipes/crack.html">Keto Crack Chicken</a></p>
+
     
   
      
